--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy": "gh-pages -d build",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:prod": "serve -s dist"
   },
   "dependencies": {
     "emoji-picker-react": "^4.9.2",
