--- a/firebase.json
+++ b/firebase.json
@@ -11,14 +11,22 @@
         "source": "**",
         "destination": "/index.html"
       }
-    ],
-    "environment": {
-      "REACT_APP_FIREBASE_API_KEY": "your_api_key",
-      "REACT_APP_FIREBASE_AUTH_DOMAIN": "your_auth_domain",
-      "REACT_APP_FIREBASE_PROJECT_ID": "your_project_id",
-      "REACT_APP_FIREBASE_STORAGE_BUCKET": "your_storage_bucket",
-      "REACT_APP_FIREBASE_MESSAGING_SENDER_ID": "your_messaging_sender_id",
-      "REACT_APP_FIREBASE_APP_ID": "your_app_id"
+    ]
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
     }
-  }
+  ]
 }
