--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,21 @@ dist-ssr
 *.env
 *.md
 *.lock
+*.json
+*.yml
+*.yaml
+*.tgz
+*.swp       
+*.bak
+*.map
+*.sql
+*.sqlite
+*.sqlite3
+*.db
+*.pdb
+*.log
+*.cache
+*.pnp
+*.pnp.js
+*.pnp.cjs
+*.log
