--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.2.0",
     "emoji-picker-react": "^4.9.2",
     "firebase": "^10.12.1",
+    "firebase-admin": "^12.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^10.0.5",
